@@ -167,6 +167,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added inprop=talkid,subjectid to prop=info
 * Added help text message that specifies whether a module is POST-only
 * Added createonly parameter to action=edit
+* Replaced $wgAPIUCUserPrefixMinLength by the more generic $wgAPIMaxDBRows
 
 === Languages updated in 1.13 ===
 
